feat: update desc text

--- a/src/components/Jumbotron.astro
+++ b/src/components/Jumbotron.astro
@@ -1,15 +1,24 @@
 <div class="flex flex-col justify-center items-center my-32 space-y-12">
-  <h1 class="font-medium text-4xl tracking-wide flex flex-col items-center justify-center">
-    <span class="font-semibold bg-yellow-300 dark:bg-[#19122e] block p-6 w-fit mb-8 rounded-md text-center">
-      Hey, I'm Difa
-    </span>
-    <span class="flex flex-col items-center justify-center space-y-2 md:space-y-0 md:flex-row">
-      <span>a</span>
-      <span class="font-semibold mx-3 gradient-text">web dev</span>
-      <span>who</span>
-    </span>
-  </h1>
-  <p class="text-center w-full md:w-3/4 text-xl dark:text-gray-300">
-    crafts sleek, high-quality websites with a futuristic edge. I specialize in minimalist designs that combine advanced technology with seamless usability. From smooth animations to optimized performance, I turn complex ideas into simple, engaging user experiences.
-  </p>
+    <h1
+        class="font-medium text-4xl tracking-wide flex flex-col items-center justify-center"
+    >
+        <span
+            class="font-semibold bg-yellow-300 dark:bg-[#19122e] block p-6 w-fit mb-8 rounded-md text-center"
+        >
+            Hey, I'm Difa
+        </span>
+        <span
+            class="flex flex-col items-center justify-center space-y-2 md:space-y-0 md:flex-row"
+        >
+            <span>a</span>
+            <span class="font-semibold mx-3 gradient-text">web dev</span>
+            <span>who</span>
+        </span>
+    </h1>
+    <p class="text-center w-full md:w-3/4 text-xl dark:text-gray-300">
+        crafts sleek, high-quality websites with a futuristic edge. Specialized
+        in minimalist designs that combine advanced technology with seamless
+        usability. From smooth animations to optimized performance, I turn
+        complex ideas into simple, engaging user experiences.
+    </p>
 </div>
