--- a/src/components/seo/SEO.astro
+++ b/src/components/seo/SEO.astro
@@ -22,7 +22,7 @@ const {
     keywords = defaultSEO.keywords,
     author = defaultSEO.author,
     image = defaultSEO.image,
-    imageAlt = "Difa Ananda Portfolio - Full Stack Developer & Designer",
+    imageAlt = "Difa Ananda Portfolio",
     canonical = Astro.url.href,
     type = "website",
     publishedTime,
