--- a/src/components/Jumbotron.astro
+++ b/src/components/Jumbotron.astro
@@ -18,7 +18,7 @@
     <p class="text-center w-full md:w-3/4 text-xl dark:text-gray-300">
         crafts sleek, high-quality websites with a futuristic edge. Specialized
         in minimalist designs that combine advanced technology with seamless
-        usability. From smooth animations to optimized performance, I turn
-        complex ideas into simple, engaging user experiences.
+        usability. From smooth animations to optimized performance, turn complex
+        ideas into simple, engaging user experiences.
     </p>
 </div>
