feat: update desc text

--- a/src/components/seo/SEO.astro
+++ b/src/components/seo/SEO.astro
@@ -49,7 +49,7 @@ const structuredData = {
                 `https://linkedin.com/in/${siteConfig.linkedinUsername}`,
                 `https://twitter.com/${siteConfig.twitterHandle.replace("@", "")}`,
             ],
-            jobTitle: "Full Stack Developer & Designer",
+            jobTitle: "Full Stack Developer",
             worksFor: {
                 "@type": "Organization",
                 name: "Freelance",
